Remove double scrollbar in examples container. Fixes #99.

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1342,12 +1342,9 @@ p.example-instructions {
 
 .example-body {
   padding: 10px;
-  white-space: pre;
-  font-family: monospace;
   font-size: 14px;
   background-color: #fafafa;
   margin-bottom: 10px;
-  overflow-x: scroll;
 
   &.just-created {
 //    background-color: #ffa;
